# nwkpy

./: .gitignore  README.md  pyproject.toml
examples/ex1/: indata.py  main.py
examples/ex2/: indata.py  main.py  mesh.eps
examples/ex2/outdata/: B.npz
examples/ex2_SinglePoint/: main.py
examples/ex3/: indata.py  main.py
nwkpy/: __init__.py  _common.py  _constants.py  _database.py  config.py  hamiltonian.py  hamiltonian_wz.py  operator_matrices.py  physics.py  symmetry.py  utilities.py  visualization.py
nwkpy.egg-info/: PKG-INFO
nwkpy/fem/: __init__.py  element.py  gauss.py  problem.py  shape.py  solver.py
nwkpy/fem/mesh/: ffem_io.py  ffem_script.py  mesh.py
nwkpy/fem/mesh/pyFreeFem/: FreeFemIO.py  TriMesh.py  __init__.py  edpScript.py  functions.py
nwkpy/fem/mesh/pyFreeFem/FreeFemTools/: FreeFemStatics.py  edpTools.py
nwkpy/fem/mesh/pyFreeFem/meshTools/: polygon_triangulate.py  segments.py
nwkpy/interface/: angmom.py  bandstructure.py  poisson.py  updater.py
scripts/band_structure/: indata.py  main.py  user_parameters.dict
scripts/mesh_generation/: indata.py  main.py
scripts/self_consisntent/: main.py
scripts/self_consisntent_multi_point/: indata.py  main.py
service/: file_comparator.py  list_functions_with_doc.py  triangular_fft.py
